# MeasurementSampling

./: .gitignore  CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.h  Measurement.cpp  Measurement.h  MeasurementSampler.cpp  MeasurementSampler.h  OneSecondBeforeAndAfter.txt  main.cpp  test_convertToTimePoint.cpp  test_inputFormat.cpp  test_roundToNextMultiple.cpp  test_sample.cpp  test_sampledTimePoint.cpp
include/: HelperFunctions.h  Measurement.h  MeasurementSampler.h
src/: HelperFunctions.cpp  Measurement.cpp  MeasurementSampler.cpp  main.cpp
test/: CMakeLists.txt  test_convertToTimePoint.cpp  test_inputFormat.cpp  test_roundToNextMultiple.cpp  test_sample.cpp  test_sampledTimePoint.cpp
